...
        android:padding="12dp"
        android:text="Create Account?"
        android:textColor="#0044CC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:minHeight="48dp"
        android:padding="12dp"
        android:hint="Enter Email"
        android:inputType="textEmailAddress"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

    <!-- Password Input -->
    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:minHeight="48dp"
        android:padding="12dp"
        android:hint="Enter Password"
        android:inputType="textPassword"
...
