...
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="Details" />

        <Button
            android:id="@+id/applyButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:backgroundTint="#614D99"
            android:text="Apply"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>
