<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    android:background="#ffffff">

    <TextView
        android:id="@+id/payForJobCompletion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="Pay for Job Completion"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:translationY="-250dp" />

    <Button
        android:id="@+id/payButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#0070BA"
        android:text="Pay with PayPal"
        android:textColor="#ffffff"
        android:translationY="-100dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Enter the payment value:"
        android:translationY="-260dp" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:translationY="-240dp" />

    <TextView
        android:id="@+id/passOrFail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/backToListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back to Employee List"
        android:layout_marginTop="20dp"
        android:backgroundTint="#AAAAAA"
        android:textColor="#ffffff"
        android:translationY="-200dp" />


</LinearLayout>
